[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ExitGameButton.tscn" type="PackedScene" id=5]

[node name="PauseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
rect_scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="ColorRectBorder" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
rect_min_size = Vector2( 1260, 700 )
size_flags_horizontal = 2
size_flags_vertical = 2
color = Color( 0, 0, 0, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1509.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" parent="Menu" instance=ExtResource( 2 )]
margin_right = 1389.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Center" type="HBoxContainer" parent="Menu"]
margin_top = 304.0
margin_right = 1389.0
margin_bottom = 612.0

[node name="Buttons" type="VBoxContainer" parent="Menu/Center"]
margin_right = 1389.0
margin_bottom = 308.0
size_flags_horizontal = 3

[node name="Continue" parent="Menu/Center/Buttons" instance=ExtResource( 3 )]
margin_bottom = 100.0
rect_min_size = Vector2( 1389, 100 )

[node name="MainMenu" parent="Menu/Center/Buttons" instance=ExtResource( 4 )]
margin_top = 104.0
margin_bottom = 204.0
rect_min_size = Vector2( 1389, 100 )

[node name="Exit" parent="Menu/Center/Buttons" instance=ExtResource( 5 )]
margin_top = 208.0
margin_bottom = 308.0
rect_min_size = Vector2( 200, 100 )
flat = true
[connection signal="pressed" from="Menu/Center/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Center/Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Menu/Center/Buttons/Exit" to="." method="_on_Exit_pressed"]
